Transalte first round

--- a/_includes/html/syntax.html
+++ b/_includes/html/syntax.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page title</title>
+    <title>Titre de page</title>
   </head>
   <body>
     <img src="images/company-logo.png" alt="Company">
